test/compile_errors/stage1/obj/missing_function_name.zig
fn () void {}
export fn entry() usize { return @sizeOf(@TypeOf(f)); }

// missing function name
//
// tmp.zig:1:1: error: missing function name
